<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B262C"
    tools:context=".SelectMusicFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/curve_background"
            android:paddingHorizontal="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shape"
                android:layout_marginBottom="17dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/face_time"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_pro_bold"
        android:text="@string/today_s_hit"
        android:textColor="#F9F8FF"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_container" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="32dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/search_background"
        android:drawableEnd="@drawable/ic_search_icon"
        android:hint="@string/search"
        android:paddingHorizontal="20dp"
        android:textColorHint="#878B8B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_shuffle"
        android:layout_width="176dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/suffle_shape"
        android:fontFamily="@font/sf_pro_bold"
        android:text="@string/shuffle_play"
        android:textAllCaps="false"
        android:textColor="#F4EEFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton2"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/play_shape"
        android:fontFamily="@font/sf_pro_bold"
        android:text="@string/play"
        android:textColor="#F4EEFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaylist"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_marginBottom="78dp"
        android:layout_marginTop="16dp"
        tools:itemCount="8"
        tools:listitem="@layout/music_item"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_shuffle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="305dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/play_backgroung"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/play_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_bold"
            android:text="@string/the_weekend"
            android:textColor="#F9F8FF"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_bold"
            android:text="@string/starboy"
            android:textColor="#878B8B"
            android:textSize="13sp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@id/tv_artist" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group__9_"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>