<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B262C"
    tools:context=".MusicDetailsFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image_gradient"
        android:scaleType="fitXY"
        android:src="@drawable/album_cover_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_path__4_"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:id="@+id/gradient_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="348dp"
        android:background="@drawable/image_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/tv_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/the_weekend"
        android:textColor="#F5F5F5"
        android:fontFamily="@font/sf_pro_bold"
        android:layout_marginStart="32dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gradient_layout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starboy"
        android:textColor="#878B8B"
        android:textSize="13sp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_artist"/>

    <ImageView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_more_vert_24"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/gradient_layout"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/music_progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_marginHorizontal="32dp"
        android:progressTint="#7971E9"
        android:progressBackgroundTint="@color/white"
        android:progressBackgroundTintMode="screen"
        android:progress="40"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

    <TextView
        android:id="@+id/tv_startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_32"
        android:textSize="12sp"
        android:textColor="#878B8B"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/music_progressBar"/>

    <TextView
        android:id="@+id/tv_endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3_31"
        android:textSize="12sp"
        android:textColor="#878B8B"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/music_progressBar"/>

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_startTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrows_copy"/>

        <ImageView
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group_6"/>

        <ImageView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrows"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/volume_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="47dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:progressTint="#E9B171"
        android:thumbTint="#E9B171"
        android:progressBackgroundTintMode="screen"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@id/layout_btn"
        android:progress="70"/>

    <ImageView
        android:id="@+id/iv_volume_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_path__2_"
        android:layout_marginStart="63dp"
        app:layout_constraintTop_toBottomOf="@id/volume_seekbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/iv_volume_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_volume_copy"
        android:layout_marginEnd="63dp"
        app:layout_constraintTop_toBottomOf="@id/volume_seekbar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:gravity="center"
        android:background="@drawable/tab_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lyrics"
        android:textSize="14sp"
        android:textColor="#7971E9"
        android:fontFamily="@font/poppins"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"/>



    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>





